--- a/ZTF_sims/ZTF_avro_list.ipynb
+++ b/ZTF_sims/ZTF_avro_list.ipynb
@@ -76,6 +76,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Volumes/doogesh_HDPro/ZTF/ztf_public_20211001',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211002',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211003',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211004',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211007',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211009',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211010',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211011',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211013',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211014',\n",
+       " '/Volumes/doogesh_HDPro/ZTF/ztf_public_20211015']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_files(root_dir):\n",
